Readme modified 1. maven modularization 2. Data model